modified:   codis/readme.txt 	renamed:    lnmp/my.cnf -> lnmp/my.cnf.Percona 	modified:   ntop/readme.txt 	modified:   tomcat/install.sh 	modified:   tomcat/server.xml 	new file:   tomcat/setenv.sh 	new file:   tomcat/tomcat